--- a/src/main/resources/org/example/loginscreen.fxml
+++ b/src/main/resources/org/example/loginscreen.fxml
@@ -1,32 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DialogPane?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<DialogPane fx:controller="org.example.FormController" prefHeight="285.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <content>
-      <Pane prefHeight="214.0" prefWidth="460.0">
-         <children>
-            <Button fx:id="loginbutton" layoutX="401.0" layoutY="120.0" mnemonicParsing="false" onAction="#logintoMainScreen" text="Log ind" />
-            <PasswordField fx:id="passfield" layoutX="107.0" layoutY="106.0" />
-            <TextField
-                    onMouseExited="#writeContent" layoutX="107.0" fx:id="mailfield" layoutY="80.0" />
-            <Label layoutX="32.0" layoutY="85.0" text="Brugernavn" />
-            <Label layoutX="32.0" layoutY="111.0" text="Password" />
-         </children>
-      </Pane>
-   </content>
-   <header>
-      <ImageView fitHeight="82.0" fitWidth="450.0" pickOnBounds="true">
-         <image>
-            <Image url="@../../../../../../../../Downloads/index.jpg" />
-         </image>
-      </ImageView>
-   </header>
-</DialogPane>
+<AnchorPane fx:controller="org.example.FormController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Button fx:id="loginbutton" onAction="#showMainMenu" layoutX="220.0" layoutY="269.0" mnemonicParsing="false" text="Login" />
+      <TextField fx:id="mailfield" layoutX="185.0" layoutY="187.0" promptText="Mail" />
+      <PasswordField fx:id="passwordfield" layoutX="185.0" layoutY="221.0" promptText="Password" />
+   </children>
+</AnchorPane>
